using min-height to ensure everything aligns evenly

--- a/_harp/css/_toc.scss
+++ b/_harp/css/_toc.scss
@@ -37,6 +37,7 @@
 
   div {
     break-inside: avoid;
+    min-height: 165px;
     padding-bottom: 30px;
 
     &:nth-child(4n) {
